# python_templates

./: .gitattributes  .gitignore  LICENSE  README.md  VERSION  cookiecutter.ps1  cookiecutter.sh  dot_gitignore.jinja2  make_menu.ps1  make_menu.sh  makefile  pyproject.toml  requirements.in  requirements.txt  update_gitignore.py  version.txt
vscode/: cookiecutter.json  extensions.py
vscode/{{cookiecutter.repo_name}}/: .gitattributes  .gitignore  dev-requirements.in  makefile  pyproject.toml  requirements.in
vscode/{{cookiecutter.repo_name}}/src/: hello_world.py
windows_package/: cookiecutter.json
windows_package/{{cookiecutter.repo_name}}/: .gitattributes  .gitignore  LICENSE  README.md  dev-requirements.in  makefile  pyproject.toml  setup.cfg  setup.py
windows_package/{{cookiecutter.repo_name}}/tests/: __init__.py  test_example.py
windows_package/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py
windows_qt/: cookiecutter.json
windows_qt/{{cookiecutter.repo_name}}/: .gitattributes  .gitignore  dev-requirements.in  makefile  pyproject.toml  requirements.in  {{cookiecutter.repo_name}}.py  {{cookiecutter.repo_name}}.qrc  {{cookiecutter.repo_name}}.ui
windows_standalone_exe/: application.py  click_cli_template.py  cookiecutter.json  dev-requirements.in  makefile  mk_file_version_info.py
windows_standalone_exe/{{cookiecutter.repo_name}}/: .gitattributes  .gitignore  LICENSE  application.py  dev-requirements.in  makefile  mk_file_version_info.py  pyproject.toml  requirements.in  setup.iss  version.iss  {{cookiecutter.repo_name}}.py
windows_vsc/: .gitignore  README.md  cookiecutter.json  dev-requirements.in  makefile
windows_vsc/{{cookiecutter.repo_name}}/: .gitignore  makefile
