[project]
name = "python_templates"
authors = [
  { name="Ben Hattem", email="benghattem@gmail.com" },
]
description = "Python templates"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "jinja2",
    "requests",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"

[tool.pip-tools.compile]
resolver = "backtracking"
strip-extras = true

[tool.pip-tools.sync]
pip-args = "--no-deps"
