[project]
name = "python-templates"
authors = [
  { name="Ben Hattem", email="benghattem@gmail.com" },
]
description = "Python templates"
readme = "README.md"
requires-python = "==3.13.9"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "jinja2",
    "requests",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
annotation-style = "line"
universal = true

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    "vscode",
    "windows_package",
    "windows_qt",
    "windows_standalone_exe",
]

