[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
authors = [{ name = "{{ cookiecutter.copyright_author }}", email = "{{ cookiecutter.author_email }}" }]
description = "{{ cookiecutter.package_description }}"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pytest",
    "pytest-cov",
    "wheel",
]

[tool.hatch.build.targets.sdist]
exclude = [".venv"]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.package_name }}"]

[tool.hatch.version]
path = "{{ cookiecutter.package_name }}/__init__.py"

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pylint.messages_control]
max-line-length = 120
