[project]
name = "{{ cookiecutter.package_name }}"
description = "{{ cookiecutter.package_description }}"
authors = [{ name = "{{ cookiecutter.copyright_author }}", email = "{{ cookiecutter.author_email }}" }]
readme = "README.md"
requires-python = "=={{ cookiecutter.python_version }}"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".venv"]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.package_name }}"]

[tool.hatch.version]
path = "{{ cookiecutter.package_name }}/__init__.py"

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
annotation-style = "line"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pylint.messages_control]
max-line-length = 120
disable = [
]
