[project]
name = "{{ cookiecutter.repo_name }}"
authors = [
  { name="{{ cookiecutter.app_author }}", email="{{ cookiecutter.app_author_email }}" },
]
description = "{{ cookiecutter.app_description }}"
requires-python = "==3.13.2"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pyside6",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
generate-hashes = true
require-hashes = true

[tool.pylint.messages_control]
max-line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4
