[project]
name = "{{ cookiecutter.repo_name }}"
authors = [
  { name="{{ cookiecutter.app_author }}", email="{{ cookiecutter.app_author_email }}" },
]
description = "{{ cookiecutter.app_description }}"
requires-python = "=={{ cookiecutter.python_version }}"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "pywin32-ctypes",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
annotation-style = "line"
generate-hashes = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
]

[tool.pylint.typecheck]
generated-members = [
]

[tool.ruff]
line-length = 120
indent-width = 4
